change the way of get information

--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
       </div>
 
       <div class="catalog-content">
-        <!-- <div
+        <div
           class="catalog-content__item catalog-content__item_active"
           data-country="France"
-        > -->
-        <div class="row"></div>
+        >
+          <div class="row"></div>
           <!-- <div class="row">
             <div class="catalog-content__card">
               <picture class="catalog-content__img">
@@ -211,7 +211,7 @@
               <p class="catalog-content__price">20 000 руб</p>
               <button class="btn catalog-content__btn">В корзину</button>
             </div>
-          </div> -->
+          </div>  -->
 
           <!-- <div class="row">
             <div class="catalog-content__card">
@@ -285,20 +285,21 @@
           </div> -->
         </div>
         <div class="catalog-content__item" data-country="Germany">
-          Германия Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-          Fugit adipisci velit, voluptate sed, nesciunt commodi quisquam ullam,
-          eveniet modi tempore dicta voluptas maxime? Excepturi itaque dolores
-          recusandae laboriosam ab laudantium!
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate a
+          facere sapiente dolorem! Suscipit illum sequi corporis incidunt.
+          Laborum, excepturi iusto? Commodi molestias, eveniet delectus iste
+          nemo neque cupiditate velit!
         </div>
         <div class="catalog-content__item" data-country="England">
-          Англя Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa
-          impedit exercitationem ut modi. Ipsum sed consequuntur placeat,
-          obcaecati blanditiis aliquid hic velit fugit, aperiam, quo expedita
-          doloribus explicabo. Dolorum, laudantium.
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+          Necessitatibus, nihil, id velit, ducimus veritatis eius possimus
+          aliquid temporibus voluptas architecto dicta excepturi fugit
+          consectetur enim ad. Facilis asperiores illum eveniet!
         </div>
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="info.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
